--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.temple.audiobb">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,10 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AudioBB">
         <activity
+
             android:name=".BookSearchActivity"
             android:exported="false"
             android:label="@string/title_activity_book_search"
-            android:theme="@style/Theme.AudioBB.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
